--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,6 +1,6 @@
 # System
-gpu_num: 1
-seed: 277
+gpu_num: 0
+seed: 42
 debug: False
 verbose: False
 
@@ -11,23 +11,23 @@ val_size: 0.2
 input_width: 480
 input_height: 256
 scaler: normalize
-num_workers: 4
+num_workers: 0
 shuffle: True
 drop_last: False
 
 # Model
 architecture: DeepLabV3Plus
-encoder: resnet34 #timm-regnety_016
-encoder_weight: imagenet #imagenet
+encoder: timm-efficientnet-b1 #timm-regnety_016
+encoder_weight: noisy-student #imagenet
 depth: 5
 n_classes: 4
 activation: null
 
 # Trainer
 n_epochs: 100
-batch_size: 40
+batch_size: 8
 loss: 
-  name: FocalLoss # MeanCCELoss
+  name: MeanCCELoss # MeanCCELoss
   args:
     weight: [1, 1, 1, 1]
 metrics: 
@@ -40,7 +40,7 @@ earlystopping_patience: 5
 optimizer:
   name: AdamW
   args:
-    lr: 5.0e-04
+    lr: 5.0e-03
     weight_decay: 5.0e-02
 scheduler:
   name: CosineAnnealingLR
